--- a/client/src/components/IntroduceBox/index.css
+++ b/client/src/components/IntroduceBox/index.css
@@ -1,3 +1,16 @@
 .card-introduce {
-  background-color: rgb(98, 148, 248);
+  background-color: white;
+  border-color: bisque;
+  border-radius: 10px;
+  box-shadow: 0 2px 8px 1px rgb(117 117 117);
+}
+
+.statistic-card {
+  display: flex;
+  justify-content: space-around;
+}
+
+.card-padding {
+  padding-bottom: 8px;
+  padding-top: 8px;
 }
