--- a/client/src/components/IntroduceBox/index.css
+++ b/client/src/components/IntroduceBox/index.css
@@ -1,10 +1,3 @@
-.card-introduce {
-  background-color: white;
-  border-color: bisque;
-  border-radius: 10px;
-  box-shadow: 0 2px 8px 1px rgb(117 117 117);
-}
-
 .statistic-card {
   display: flex;
   justify-content: space-around;
@@ -13,4 +6,10 @@
 .card-padding {
   padding-bottom: 8px;
   padding-top: 8px;
+}
+
+.card_box:hover {
+  transform: translateY(-5px) scale(1.005) translateZ(0);
+  box-shadow: 0 24px 36px rgba(0, 0, 0, 0.11),
+    0 24px 46px var(--box-shadow-color);
 }
